--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,5 @@
 <!-- Hero Section -->
-<section class="relative flex flex-col px-4 pt-20 pb-0 overflow-hidden container mx-auto" id="hero">
+<section class="relative flex flex-col px-5 pt-20 pb-0 overflow-hidden container mx-auto" id="hero">
   <!-- Ambient Background Glow -->
   <div class="fixed top-0 left-0 w-full h-full overflow-hidden pointer-events-none z-0">
     <div class="absolute top-[-10%] right-[-5%] w-[500px] h-[500px] bg-primary/10 rounded-full blur-[120px]"></div>
@@ -91,11 +91,10 @@
   </div>
   
   <!-- Tech Ticker / Footer of Hero -->
-  <div class="w-full border-t border-white/5 bg-[#0d1218]/50 backdrop-blur-sm py-6 z-10">
+  <!-- <div class="w-full border-t border-white/5 bg-[#0d1218]/50 backdrop-blur-sm py-6 z-10">
     <div class="max-w-[1440px] mx-auto px-4">
       <p class="text-xs text-slate-400 uppercase tracking-widest font-bold mb-4">Core Technologies</p>
       
-      <!-- Tech Ticker -->
       <div class="flex overflow-x-auto gap-8 pb-2 scrollbar-hide">
         <div class="flex items-center gap-3 min-w-max group opacity-70 hover:opacity-100 transition-opacity">
           <div class="size-10 rounded bg-white/5 border border-white/10 flex items-center justify-center text-white">
@@ -178,7 +177,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </section>
 
 <style>
