--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,5 +1,5 @@
 <!-- About Me Section -->
-<section class="py-20 px-4 bg-background-dark border-t border-slate-800/50" id="about">
+<section class="container mx-auto py-20 px-5 bg-background-dark border-t border-slate-800/50" id="about">
   <div class="max-w-[1280px] mx-auto">
     <!-- Hero / About Section -->
     <div class="flex flex-col lg:flex-row gap-12 lg:gap-20 items-center mb-16 md:mb-24">
@@ -82,7 +82,7 @@
           </div>
         </div>
         
-        <div class="flex flex-wrap gap-4 pt-2">
+        <!-- <div class="flex flex-wrap gap-4 pt-2">
           <a 
             href="#work"
             class="flex items-center gap-2 h-12 px-6 bg-primary hover:bg-blue-600 rounded-lg text-white font-bold tracking-wide transition-all duration-300 shadow-[0_4px_14px_0_rgba(37,140,244,0.39)] hover:shadow-[0_6px_20px_rgba(37,140,244,0.23)] hover:-translate-y-0.5"
@@ -97,7 +97,7 @@
             <span>Get in Touch</span>
             <span class="material-symbols-outlined text-sm">mail</span>
           </a>
-        </div>
+        </div> -->
       </div>
     </div>
     
