--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,34 +1,49 @@
 <!-- Contact Section -->
-<section class="py-24 px-4 bg-background-dark relative" id="contact">
+<section class="py-20 bg-background-dark relative" id="contact">
   <div class="absolute bottom-0 left-0 w-full h-px bg-gradient-to-r from-transparent via-primary/20 to-transparent"></div>
   
-  <div class="max-w-[600px] mx-auto text-center flex flex-col items-center">
+  <div class="container mx-auto px-5 text-center flex flex-col items-center">
     <span class="text-primary font-mono text-sm tracking-widest uppercase mb-4">What's Next?</span>
     <h2 class="text-4xl md:text-5xl font-black text-white mb-6">Let's build something.</h2>
     <p class="text-slate-400 text-lg mb-10 max-w-md">
       Whether you have a question, a project idea, or just want to say hi, my inbox is always open.
     </p>
     
-    <a class="group relative inline-flex items-center justify-center px-8 py-4 font-bold text-background-dark transition-all duration-200 bg-primary font-display rounded-lg hover:w-full hover:px-12 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary focus:ring-offset-gray-900" href="mailto:hello@example.com">
+    <a class="group relative inline-flex items-center justify-center px-8 py-4 font-bold text-background-dark transition-all duration-200 bg-primary font-display rounded-lg focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary focus:ring-offset-gray-900" href="mailto:giventheo2211@gmail.com">
       <span class="absolute inset-0 w-full h-full -mt-1 rounded-lg opacity-30 bg-gradient-to-b from-transparent via-transparent to-black"></span>
       <span class="relative flex items-center gap-2">
         Say Hello 
-        <span class="material-symbols-outlined group-hover:rotate-45 transition-transform duration-300">send</span>
+        <span class="material-symbols-outlined group-hover:-rotate-12 transition-transform duration-300">send</span>
       </span>
     </a>
     
     <div class="mt-12 flex gap-8">
-      <a class="text-slate-500 hover:text-primary transition-colors hover:-translate-y-1 transform duration-300" href="#">
+      <!-- github -->
+      <a class="text-slate-500 hover:text-primary transition-colors hover:-translate-y-1 transform duration-300" href="https://github.com/Rebonanza/">
         <svg aria-hidden="true" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
           <path clip-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" fill-rule="evenodd"></path>
         </svg>
       </a>
-      <a class="text-slate-500 hover:text-primary transition-colors hover:-translate-y-1 transform duration-300" href="#">
+
+      <!-- gitlab -->
+      <a
+        class="text-slate-500 hover:text-primary transition-colors hover:-translate-y-1 transform duration-300"
+        href="https://gitlab.com/giventheok"
+        aria-label="GitLab"
+      >
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" viewBox="0 0 380 380"><defs><style>.cls-1{fill:#64748B;}</style></defs><g id="LOGO"><path class="cls-1" d="M282.83,170.73l-.27-.69-26.14-68.22a6.81,6.81,0,0,0-2.69-3.24,7,7,0,0,0-8,.43,7,7,0,0,0-2.32,3.52l-17.65,54H154.29l-17.65-54A6.86,6.86,0,0,0,134.32,99a7,7,0,0,0-8-.43,6.87,6.87,0,0,0-2.69,3.24L97.44,170l-.26.69a48.54,48.54,0,0,0,16.1,56.1l.09.07.24.17,39.82,29.82,19.7,14.91,12,9.06a8.07,8.07,0,0,0,9.76,0l12-9.06,19.7-14.91,40.06-30,.1-.08A48.56,48.56,0,0,0,282.83,170.73Z"/></g></svg>
+      </a>
+
+
+      <!-- linkedin -->
+      <a class="text-slate-500 hover:text-primary transition-colors hover:-translate-y-1 transform duration-300" href="https://www.linkedin.com/in/given-theo">
         <svg aria-hidden="true" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
           <path clip-rule="evenodd" d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" fill-rule="evenodd"></path>
         </svg>
       </a>
-      <a class="text-slate-500 hover:text-primary transition-colors hover:-translate-y-1 transform duration-300" href="#">
+
+      <!-- instagram -->
+      <a class="text-slate-500 hover:text-primary transition-colors hover:-translate-y-1 transform duration-300" href="https://www.instagram.com/gvnthe/">
         <svg aria-hidden="true" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
           <path d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z"></path>
         </svg>
