--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -46,7 +46,10 @@ const { title, description = 'Frontend & Backend Engineer portfolio showcasing m
     <meta name="twitter:description" content={description} />
     <meta name="twitter:image" content="/og-image.png" />
     
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <meta name="generator" content={Astro.generator} />
   </head>
   <body>
