fix: adjusting menu and image

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,8 +1,8 @@
 <!-- Contact Section -->
-<section class="py-20 bg-background-dark relative" id="contact">
+<section class="py-8 lg:py-20 bg-background-dark relative" id="contact">
   <div class="absolute bottom-0 left-0 w-full h-px bg-gradient-to-r from-transparent via-primary/20 to-transparent"></div>
   
-  <div class="container mx-auto px-5 text-center flex flex-col items-center">
+  <div class="container mx-auto px-6 text-center flex flex-col items-center">
     <span class="text-primary font-mono text-sm tracking-widest uppercase mb-4">What's Next?</span>
     <h2 class="text-4xl md:text-5xl font-black text-white mb-6">Let's build something.</h2>
     <p class="text-slate-400 text-lg mb-10 max-w-md">
@@ -31,7 +31,9 @@
         href="https://gitlab.com/giventheok"
         aria-label="GitLab"
       >
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 380 380"><defs><style>.cls-1{fill:#64748B;}</style></defs><g id="LOGO"><path class="cls-1" d="M282.83,170.73l-.27-.69-26.14-68.22a6.81,6.81,0,0,0-2.69-3.24,7,7,0,0,0-8,.43,7,7,0,0,0-2.32,3.52l-17.65,54H154.29l-17.65-54A6.86,6.86,0,0,0,134.32,99a7,7,0,0,0-8-.43,6.87,6.87,0,0,0-2.69,3.24L97.44,170l-.26.69a48.54,48.54,0,0,0,16.1,56.1l.09.07.24.17,39.82,29.82,19.7,14.91,12,9.06a8.07,8.07,0,0,0,9.76,0l12-9.06,19.7-14.91,40.06-30,.1-.08A48.56,48.56,0,0,0,282.83,170.73Z"/></g></svg>
+        <svg fill="currentColor" class="h-6 w-6" viewBox="0 0 256 256" id="Flat" xmlns="http://www.w3.org/2000/svg">
+          <path d="M231.92773,169.78029l-94.82031,65.64454a16.07612,16.07612,0,0,1-18.21484,0L24.07227,169.78029a16.03981,16.03981,0,0,1-6.35254-17.27783L45.04883,50.0176a12.00012,12.00012,0,0,1,22.831-1.12109L88.544,104h78.9121l20.66407-55.10449a12.00021,12.00021,0,0,1,22.83056,1.12109l27.32959,102.48584A16.03981,16.03981,0,0,1,231.92773,169.78029Z"/>
+        </svg>
       </a>
 
 
